tests/array_of_unknown_type/error.txt
Validation error: ./tests/array_of_unknown_type/array_of_unknown_type.fae, line 2: No symbol `abc` in the current scope
  2|     name: [5]abc
                  ^^^
